# RecuCrazyPawPals

./: .gitignore  CMakeLists.txt  CMakePresets.json  Plan Pruebas.md  README.md  copy-resources.cmake
docs/: Architecture.gaphor  index.html
docs/css/: style.css
docs/img/: card_spray.piskel  fireball_card_base.piskel  lighting_card.piskel
project/crazypawpals/resources/config/: crazypawpals.resources.json
project/crazypawpals/resources/images/cards/: test-card-sheet.aseprite
project/lib/SDL2_mixer-2.8.0/lib/x64/optional/: LICENSE.gme.txt
project/src/: main.cpp
project/src/ecs/: Component.h  Entity.h  Manager.cpp  Manager.h  ecs.h
project/src/game/: Game.cpp  Game.h  GameStructs.h  ecs_defs.h
project/src/game/scenes/: CustomDeckSelectionScene.cpp  CustomDeckSelectionScene.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  MultiplayerMenu.cpp  MultiplayerMenu.h  MythicScene.cpp  MythicScene.h  PersDeckSelectionMenuScene.cpp  PersDeckSelectionMenuScene.h  RewardScene.cpp  RewardScene.h  Scene.cpp  Scene.h  SelectionMenuScene.cpp  SelectionMenuScene.h  TutorialScene.cpp  TutorialScene.h  VictoryScene.cpp  VictoryScene.h
project/src/json/: JSON.cpp  JSON.h  JSONValue.cpp  JSONValue.h  json_demo.cpp  json_demo.h
project/src/network/: network_connection.hpp  network_context.cpp  network_context.hpp  network_message.cpp  network_message.hpp  network_state.hpp  network_utility.cpp  network_utility.hpp
project/src/network/network_message/: network_message_def.cpp  network_message_def.hpp
project/src/network/network_state/: network_state_def.hpp
project/src/our_scripts/: log_writer_to_csv.hpp
project/src/our_scripts/card_system/: Card.cpp  Card.hpp  CardList.cpp  CardList.h  CardUpgrade.hpp  PlayableCards.cpp  PlayableCards.hpp  ShootPatrons.hpp
project/src/our_scripts/components/: AnimationComponent.cpp  AnimationComponent.h  DumbWaveManager.cpp  DumbWaveManager.h  EraseTextureComponent.h  Fog.cpp  Fog.h  GamePadPlayerCtrl.cpp  GamePadPlayerCtrl.hpp  Health.cpp  Health.h  KeyboardPlayerCtrl.cpp  KeyboardPlayerCtrl.h  LifetimeTimer.cpp  LifetimeTimer.h  MythicComponent.cpp  MythicComponent.h  StateMachine.cpp  StateMachine.h  WaveManager.cpp  WaveManager.h  WaveManagerFacade.h  bullet_collision_component.cpp  bullet_collision_component.hpp  collision_registration_by_id.h  collision_triggerers.hpp  fog_collision_component.cpp  fog_collision_component.hpp  id_component.h  rigidbody_component.cpp  rigidbody_component.hpp
project/src/our_scripts/components/cards/: Deck.cpp  Deck.hpp  Mana.h  RewardDataComponent.cpp  RewardDataComponent.h
project/src/our_scripts/components/movement/: Follow.cpp  Follow.h  MovementController.cpp  MovementController.h  Transform.h
project/src/our_scripts/components/net/: GhostStateComponent.cpp  GhostStateComponent.h  enemy_synchronize.cpp  enemy_synchronize.h  player_synchronize.cpp  player_synchronize.h
project/src/our_scripts/components/rendering/: FlipXController.cpp  FlipXController.h  Image.cpp  Image.h  ImageForButton.cpp  ImageForButton.h  RotationComponent.cpp  RotationComponent.h  camera_component.cpp  camera_component.hpp  dyn_image.hpp  dyn_image_with_frames.cpp  dyn_image_with_frames.hpp  offset_dyn_image.cpp  offset_dyn_image.hpp  rect_component.hpp  render_ordering.hpp  transformless_dyn_image.cpp  transformless_dyn_image.h
project/src/our_scripts/components/ui/: Button.cpp  Button.h  DamagePopup.cpp  DamagePopup.h  HUD.cpp  HUD.h  MultiplayerHUD.cpp  MultiplayerHUD.h  PlayerHUD.cpp  PlayerHUD.h
project/src/our_scripts/components/weapons/: BulletData.h  Weapon.cpp  Weapon.h
project/src/our_scripts/mythic/: MythicDataComponent.cpp  MythicDataComponent.h  MythicItem.h  MythicItems.cpp  MythicItems.h
project/src/our_scripts/states/: AnimationState.cpp  AnimationState.h  AttackingState.cpp  AttackingState.h  Conditions.h  DashingState.cpp  DashingState.h  RotatingState.cpp  RotatingState.h  State.h  WaitingState.cpp  WaitingState.h  WalkingState.cpp  WalkingState.h
project/src/our_scripts/wave_events/: ice_skating_event.hpp  no_event.hpp  star_shower_event.cpp  star_shower_event.hpp  wave_event.cpp  wave_event.hpp
project/src/physics/: collision.cpp  collision.hpp  integration.hpp  mass.hpp  rigidbody.hpp
project/src/rendering/: camera.cpp  camera.hpp  camera_follow.cpp  camera_follow.hpp  card_rendering.cpp  card_rendering.hpp  rect.hpp  units.hpp
project/src/sdlutils/: Font.h  InputHandler.cpp  InputHandler.h  Music.h  RandomNumberGenerator.h  SDLNetUtils.cpp  SDLNetUtils.h  SDLUtils.cpp  SDLUtils.h  SDLUtilsError.cpp  SDLUtilsError.h  SoundEffect.cpp  SoundEffect.h  Texture.cpp  Texture.h  VirtualTimer.h  macros.h
project/src/utils/: Collisions.cpp  Collisions.h  DynamicBitSet.h  EventsSystem.hpp  GenID.h  Singleton.h  Vector2D.cpp  Vector2D.h  mpl.h  ptr_iterator.h
(+26 files in other folders)
